o Removed TSA URL from the configuration of the 'maven-jarsigner-plugin' adding a 'jarsigner.tsa' property.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@3401 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/pom.xml
+++ b/pom.xml
@@ -177,7 +177,7 @@
           <configuration>
             <arguments>
               <argument>-tsa</argument>
-              <argument>http://time.certum.pl/</argument>
+              <argument>${jarsigner.tsa}</argument>
             </arguments>
           </configuration>
         </plugin>
