--- a/pom.xml
+++ b/pom.xml
@@ -305,14 +305,39 @@
           <version>1.0.1</version>
           <executions>
             <execution>
-              <id>enforce-maven</id>
+              <id>enforce-build-maven</id>
+              <phase>validate</phase>
               <goals>
                 <goal>enforce</goal>
               </goals>
               <configuration>
                 <rules>
                   <requireMavenVersion>
-                    <message>This project requires Apache Maven 2.2.1 (r801777; 2009-08-06 21:16:01+0200).</message>
+                    <message>
+This project should be built using one of the following Apache Maven versions.
+
+    o Apache Maven 2.2.1 (r801777; 2009-08-06 21:16:01+0200)
+    o Apache Maven 3.0.3 (r1075438; 2011-02-28 18:31:09+0100)
+                    </message>
+                    <version>[2.2.1],[3.0.3]</version>
+                  </requireMavenVersion>
+                </rules>
+              </configuration>
+            </execution>
+            <execution>
+              <id>enforce-site-maven</id>
+              <phase>pre-site</phase>
+              <goals>
+                <goal>enforce</goal>
+              </goals>
+              <configuration>
+                <rules>
+                  <requireMavenVersion>
+                    <message>
+This project's site should be built using one of the following Apache Maven versions.
+
+    o Apache Maven 2.2.1 (r801777; 2009-08-06 21:16:01+0200)
+                    </message>
                     <version>[2.2.1]</version>
                   </requireMavenVersion>
                 </rules>
