--- a/pom.xml
+++ b/pom.xml
@@ -888,7 +888,7 @@
       <dependency>
         <groupId>javax.xml.bind</groupId>
         <artifactId>jaxb-api</artifactId>
-        <version>2.2.2</version>
+        <version>2.2.4</version>
       </dependency>
       <dependency>
         <groupId>javax.xml.stream</groupId>
@@ -903,7 +903,7 @@
       <dependency>
         <groupId>com.sun.xml.bind</groupId>
         <artifactId>jaxb-impl</artifactId>
-        <version>2.2.2</version>
+        <version>2.2.4-1</version>
       </dependency>
 
       <!-- Misc -->
