o Updated the 'svn:keywords' property from 'Author Date Id Revision' to 'JOMC=%b%_%r%_%d%_%a'. o Updated to substitute '$Id$' keyword with '$JOMC$'.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@3798 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/jomc-standalone-model/src/test/resources/logging.properties
+++ b/jomc-standalone-model/src/test/resources/logging.properties
@@ -1,4 +1,4 @@
-# $Id$
+# $JOMC$
 .level=ALL
 handlers=java.util.logging.ConsoleHandler java.util.logging.FileHandler
 java.util.logging.FileHandler.pattern=${project.build.directory}/debug.log
