--- a/jomc-standalone-model/src/main/resources/org/jomc/standalone/model/modlet/StandaloneModelValidator.properties
+++ b/jomc-standalone-model/src/main/resources/org/jomc/standalone/model/modlet/StandaloneModelValidator.properties
@@ -1,4 +1,4 @@
-# $Id$
+# $JOMC$
 implementationMethodsDefaultExceptionTargetClassConstraint=Default exception ''{1}'' of the methods of implementation ''{0}'' cannot declare target exception ''{2}''.
 implementationMethodDefaultExceptionTargetClassConstraint=Default exception ''{2}'' of method ''{1}'' of implementation ''{0}'' cannot declare target exception ''{3}''.
 modulesNotFound=No modules found for model ''{0}''.
