--- a/jomc-standalone-ri/src/test/resources/logging.properties
+++ b/jomc-standalone-ri/src/test/resources/logging.properties
@@ -1,4 +1,4 @@
-# $Id$
+# $JOMC$
 .level=ALL
 handlers=java.util.logging.ConsoleHandler java.util.logging.FileHandler
 java.util.logging.FileHandler.pattern=${project.build.directory}/debug.log
