o Removed '$' characters from 'licenseRevisionKeyword' template parameter.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@3823 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/pom.xml
+++ b/pom.xml
@@ -741,7 +741,7 @@
           </executions>
           <configuration>
             <templateParameters>
-              <licenseRevisionKeyword>$JOMC$</licenseRevisionKeyword>
+              <licenseRevisionKeyword>JOMC</licenseRevisionKeyword>
               <licenseSkipVendorCopyright>true</licenseSkipVendorCopyright>
             </templateParameters>
           </configuration>
