o Re-added 'jomc-ci' profile.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@3858 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/pom.xml
+++ b/pom.xml
@@ -1502,6 +1502,58 @@
       </build>
     </profile>
     <profile>
+      <id>jomc-ci</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-scm-plugin</artifactId>
+              <executions>
+                <execution>
+                  <id>default-generate-resources</id>
+                  <phase>generate-resources</phase>
+                  <goals>
+                    <goal>update</goal>
+                  </goals>
+                </execution>
+                <execution>
+                  <id>default-process-resources</id>
+                  <phase>process-resources</phase>
+                  <goals>
+                    <goal>checkin</goal>
+                  </goals>
+                </execution>
+                <execution>
+                  <id>default-generate-test-resources</id>
+                  <phase>generate-test-resources</phase>
+                  <goals>
+                    <goal>update</goal>
+                  </goals>
+                </execution>
+                <execution>
+                  <id>default-process-test-resources</id>
+                  <phase>process-test-resources</phase>
+                  <goals>
+                    <goal>checkin</goal>
+                  </goals>
+                </execution>
+              </executions>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-scm-plugin</artifactId>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>jomc-release</id>
       <activation>
         <activeByDefault>false</activeByDefault>
