o Updated the configuration of the 'maven-enforcer-plugin' to add a 'requireJavaVersion' rule to issue a warning when using JDK < 6.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@3874 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/pom.xml
+++ b/pom.xml
@@ -460,6 +460,14 @@
                 </message>
                 <version>[3.0.3]</version>
               </requireMavenVersion>
+              <requireJavaVersion>
+                <message>
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+!! This project should be built using JDK 6 or any later version.                             !!
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+                </message>
+                <version>[1.6.0,)</version>
+              </requireJavaVersion>
             </rules>
           </configuration>
         </plugin>
