o Updated the 'templateParameters' parameter of the 'maven-jomc-plugin'.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@3890 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/pom.xml
+++ b/pom.xml
@@ -751,8 +751,15 @@
           </executions>
           <configuration>
             <templateParameters>
-              <licenseRevisionKeyword>JOMC</licenseRevisionKeyword>
-              <licenseSkipVendorCopyright>true</licenseSkipVendorCopyright>
+              <templateParameter>
+                <key>with-vendor-copyright</key>
+                <value>false</value>
+                <type>java.lang.Boolean</type>
+              </templateParameter>
+              <templateParameter>
+                <key>with-revision-keyword</key>
+                <value>JOMC</value>
+              </templateParameter>
             </templateParameters>
           </configuration>
         </plugin>
