--- a/pom.xml
+++ b/pom.xml
@@ -914,7 +914,13 @@
       <dependency>
         <groupId>com.sun.xml.bind</groupId>
         <artifactId>jaxb-impl</artifactId>
-        <version>2.2.4-1</version>
+        <version>2.2.3-2</version>
+        <exclusions>
+          <exclusion>
+            <groupId>javax.xml.bind</groupId>  
+            <artifactId>jaxb-api</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
 
       <!-- Misc -->
