o Added the 'jaxb2-basics' XJC plugin to the 'maven-jaxb21-plugin' plugin. o Added attributes 'final' and 'override' to the 'MethodsType' complex type of the 'jomc-standalone-1.0.xsd' schema and updated class 'org.jomc.standalone.model.MethodsType' to implement interface 'org.jomc.model.Inheritable'.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@4029 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/jomc-standalone-model/src/main/resources/org/jomc/standalone/model/modlet/StandaloneModelValidator.properties
+++ b/jomc-standalone-model/src/main/resources/org/jomc/standalone/model/modlet/StandaloneModelValidator.properties
@@ -1,4 +1,4 @@
 # $JOMC$
-implementationMethodsDefaultExceptionTargetClassConstraint=Default exception ''{1}'' of the methods of implementation ''{0}'' cannot declare target exception ''{2}''.
-implementationMethodDefaultExceptionTargetClassConstraint=Default exception ''{2}'' of method ''{1}'' of implementation ''{0}'' cannot declare target exception ''{3}''.
+implementationMethodsDefaultExceptionTargetClassConstraint=Default exception ''{2}'' of the methods of implementation ''{0}'' of module ''{1}'' cannot declare target exception ''{3}''.
+implementationMethodDefaultExceptionTargetClassConstraint=Default exception ''{3}'' of method ''{2}'' of implementation ''{0}'' of module ''{1}'' cannot declare target exception ''{4}''.
 modulesNotFound=No modules found for model ''{0}''.
