--- a/pom.xml
+++ b/pom.xml
@@ -695,6 +695,7 @@
                   <arg>-copy-constructor</arg>
                   <arg>-mark-generated</arg>
                   <arg>-Xinject-code</arg>
+                  <arg>-Xinheritance</arg>
                 </args>
                 <bindingDirectory>src/main/schemas</bindingDirectory>
                 <extension>true</extension>
@@ -702,6 +703,11 @@
                 <readOnly>true</readOnly>
                 <schemaDirectory>src/main/schemas</schemaDirectory>
                 <plugins>
+                  <plugin>
+                    <groupId>org.jvnet.jaxb2_commons</groupId>
+                    <artifactId>jaxb2-basics</artifactId>
+                    <version>${jaxb2-basics.version}</version>
+                  </plugin>
                   <plugin>
                     <groupId>net.sourceforge.ccxjc</groupId>
                     <artifactId>cc-xjc-plugin</artifactId>
@@ -1755,6 +1761,7 @@
     <wagon.version>1.0</wagon.version>
     <umlgraph.version>5.1</umlgraph.version>
     <cc-xjc-plugin.version>2.0</cc-xjc-plugin.version>
+    <jaxb2-basics.version>0.6.3</jaxb2-basics.version>
     <jomc.version>1.2-SNAPSHOT</jomc.version>
     <jomc.build.version>1.6</jomc.build.version>
     <jomc.base.version>1.0</jomc.base.version>
