--- a/pom.xml
+++ b/pom.xml
@@ -1583,22 +1583,22 @@
               <configuration>
                 <fail>true</fail>
                 <rules>
-                  <requireMavenVersion>
-                    <message>
-!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-!! This project should be built using Apache Maven 3.0.3 (r1075438; 2011-02-28 18:31:09+0100) !!
-!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-                    </message>
-                    <version>[3.0.3]</version>
-                  </requireMavenVersion>
                   <requireJavaVersion>
                     <message>
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-!! This project should be built using JDK 6 or any later version.                             !!
+!! This project must be released using JDK 6 or any later version.                            !!
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
                     </message>
                     <version>[1.6.0,)</version>
                   </requireJavaVersion>
+                  <requireMavenVersion>
+                    <message>
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+!! This project must be released using Apache Maven 3.0.3 (r1075438; 2011-02-28 18:31:09+0100)!!
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+                    </message>
+                    <version>[3.0.3]</version>
+                  </requireMavenVersion>
                 </rules>
               </configuration>
             </plugin>
