o Moved the 'default-maven-version' execution of the 'build-helper-maven-plugin' to a 'maven-version' profile activated if a 'maven.version' property is not set. o Renamed property 'buildNumber' to 'build.date'. o Updated 'JOMC Build' from '1.6' to '1.7'. o Removed the 'default-test-jar' execution of the 'maven-jar-plugin'.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@4162 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/pom.xml
+++ b/pom.xml
@@ -148,22 +148,13 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
           <version>2.3.2</version>
-          <executions>
-            <execution>
-              <id>default-test-jar</id>
-              <phase>prepare-package</phase>
-              <goals>
-                <goal>test-jar</goal>
-              </goals>
-            </execution>
-          </executions>
           <configuration>
             <archive>
               <index>true</index>
               <addMavenDescriptor>false</addMavenDescriptor>
               <compress>true</compress>
               <manifestEntries>
-                <Build-Date>${buildNumber}</Build-Date>
+                <Build-Date>${build.date}</Build-Date>
                 <Maven-Version>${maven.version}</Maven-Version>
               </manifestEntries>
             </archive>
@@ -205,7 +196,8 @@
                   <resourceBundle>org.jomc.build:jomc-build-resources:${jomc.build.version}</resourceBundle>
                 </resourceBundles>
                 <properties>
-                  <buildNumber>${buildNumber}</buildNumber>
+                  <buildDate>${build.date}</buildDate>
+                  <with-developer-copyright>true</with-developer-copyright>
                 </properties>
                 <outputDirectory>${remoteResourcesOutputDirectory}</outputDirectory>
               </configuration>
@@ -289,7 +281,7 @@
               <addMavenDescriptor>false</addMavenDescriptor>
               <compress>true</compress>
               <manifestEntries>
-                <Build-Date>${buildNumber}</Build-Date>
+                <Build-Date>${build.date}</Build-Date>
                 <Maven-Version>${maven.version}</Maven-Version>
               </manifestEntries>
             </archive>
@@ -395,7 +387,7 @@
               <addMavenDescriptor>false</addMavenDescriptor>
               <compress>true</compress>
               <manifestEntries>
-                <Build-Date>${buildNumber}</Build-Date>
+                <Build-Date>${build.date}</Build-Date>
                 <Maven-Version>${maven.version}</Maven-Version>
               </manifestEntries>
             </archive>
@@ -406,7 +398,7 @@
           <artifactId>maven-scm-plugin</artifactId>
           <version>1.6</version>
           <configuration>
-            <message>[maven-scm-plugin] Build ${buildNumber}</message>
+            <message>[maven-scm-plugin] Build ${build.date}</message>
             <username>${jomc.scm.username}</username>
             <password>${jomc.scm.password}</password>
           </configuration>
@@ -518,20 +510,13 @@
           <version>1.7</version>
           <executions>
             <execution>
-              <id>default-maven-version</id>
-              <phase>initialize</phase>
-              <goals>
-                <goal>maven-version</goal>
-              </goals>
-            </execution>
-            <execution>
               <id>default-timestamp-property</id>
               <phase>initialize</phase>
               <goals>
                 <goal>timestamp-property</goal>
               </goals>
               <configuration>
-                <name>buildNumber</name>
+                <name>build.date</name>
                 <locale>en</locale>
                 <pattern>yyyy-MM-dd'T'HH:mm:ssZ</pattern>
               </configuration>
@@ -593,8 +578,8 @@
                         <value>${project.version}</value>
                       </parameter>
                       <parameter>
-                        <name>build.number</name>
-                        <value>${buildNumber}</value>
+                        <name>project.date</name>
+                        <value>${build.date}</value>
                       </parameter>
                     </parameters>
                   </transformationSet>
@@ -1518,6 +1503,34 @@
       </build>
     </profile>
     <profile>
+      <!-- See http://jira.codehaus.org/browse/MNG-4112 -->
+      <id>maven-version</id>
+      <activation>
+        <property>
+          <name>!maven.version</name>
+        </property>
+      </activation>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>build-helper-maven-plugin</artifactId>
+              <executions>
+                <execution>
+                  <id>default-maven-version</id>
+                  <phase>initialize</phase>
+                  <goals>
+                    <goal>maven-version</goal>
+                  </goals>
+                </execution>
+              </executions>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
+    <profile>
       <id>jomc-ci</id>
       <activation>
         <activeByDefault>false</activeByDefault>
@@ -1784,7 +1797,7 @@
     <cc-xjc-plugin.version>2.0</cc-xjc-plugin.version>
     <jaxb2-basics.version>0.6.3</jaxb2-basics.version>
     <jomc.version>1.2-SNAPSHOT</jomc.version>
-    <jomc.build.version>1.6</jomc.build.version>
+    <jomc.build.version>1.7</jomc.build.version>
     <jomc.base.version>1.0</jomc.base.version>
     <jomc-standalone-model.artifact.version>1.0-beta-3-SNAPSHOT</jomc-standalone-model.artifact.version>
     <jomc-standalone-ri.artifact.version>1.0-beta-3-SNAPSHOT</jomc-standalone-ri.artifact.version>
