--- a/pom.xml
+++ b/pom.xml
@@ -237,7 +237,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.8</version>
+          <version>2.8</version> <!-- See http://jira.codehaus.org/browse/MJAVADOC-336 -->
           <configuration>
             <quiet>true</quiet>
             <bottom><![CDATA[<table border="0" width="100%"><tr><td align="left">Copyright &#169; {inceptionYear}-{currentYear} {organizationName}. All Rights Reserved.</td><td align="right"><a href="http://sourceforge.net/projects/jomc"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=257507&type=10" width="80" height="15" border="0" alt="Get JOMC at SourceForge.net. Fast, secure and Free Open Source software downloads"/></a></td></tr></table><small>Please note that this documentation is maintained by non-native english speaking authors. As such, you may encounter phrases or wordings which seem imprecise or may even have a totally different meaning to native english speaking readers than what the individual author was trying to express. If you are a native english speaking reader and find any such phrases or wordings we kindly ask you to send an email to the corresponding author and help us improve this documentation in order to avoid misunderstandings. You will find the authors' email addresses at the top of each class. Please accept our apologies for any inconvenience caused.</small>]]></bottom>
@@ -458,7 +458,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>2.4</version>
+          <version>2.4</version> <!-- See http://jira.codehaus.org/browse/MPIR-238 -->
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -627,6 +627,7 @@
           <artifactId>emma-maven-plugin</artifactId>
           <version>1.0-alpha-3</version>
           <configuration>
+            <!-- xml>false</xml See http://jira.codehaus.org/browse/MEMMA-19 -->
             <dataFiles>
               <dataFile>${project.build.directory}/coverage.ec</dataFile>
             </dataFiles>
@@ -905,7 +906,7 @@
         <groupId>javax.annotation</groupId>
         <artifactId>jsr250-api</artifactId>
         <version>1.0</version>
-        <optional>true</optional>
+        <optional>true</optional> <!-- See http://jira.codehaus.org/browse/MNG-5227 -->
       </dependency>
 
       <dependency>
@@ -1107,7 +1108,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>2.4</version>
+        <version>2.4</version> <!-- See http://jira.codehaus.org/browse/MPIR-238 -->
         <reportSets>
           <reportSet>
             <id>default-index</id>
@@ -1204,7 +1205,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.8</version>
+        <version>2.8</version> <!-- See http://jira.codehaus.org/browse/MJAVADOC-336 -->
         <reportSets>
           <reportSet>
             <id>default-javadoc</id>
@@ -1377,6 +1378,7 @@
           </reportSet>
         </reportSets>
         <configuration>
+          <!-- xml>false</xml See http://jira.codehaus.org/browse/MEMMA-19 -->
           <dataFiles>
             <dataFile>${project.build.directory}/coverage.ec</dataFile>
           </dataFiles>
@@ -1609,6 +1611,22 @@
                 </rules>
               </configuration>
             </plugin>
+            <!-- plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-changes-plugin</artifactId>
+              <executions>
+                <execution>
+                  <id>default-changes-check</id>
+                  <phase>validate</phase>
+                  <goals>
+                    <goal>changes-check</goal>
+                  </goals>
+                  <configuration>
+                    <skipSnapshots>true</skipSnapshots> See http://jira.codehaus.org/browse/MCHANGES-272
+                  </configuration>
+                </execution>
+              </executions>
+            </plugin -->
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-deploy-plugin</artifactId>
