--- a/pom.xml
+++ b/pom.xml
@@ -447,10 +447,10 @@
               <requireMavenVersion>
                 <message>
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-!! This project should be built using Apache Maven 3.0.3 (r1075438; 2011-02-28 18:31:09+0100) !!
+!! This project should be built using Apache Maven 3.0.4 (r1232337; 2012-01-17 09:44:56+0100) !!
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
                 </message>
-                <version>[3.0.3]</version>
+                <version>[3.0.4]</version>
               </requireMavenVersion>
             </rules>
           </configuration>
@@ -479,6 +479,7 @@
           <version>2.8</version>
           <configuration>
             <configLocation>org/jomc/build/resources/checkstyle.xml</configLocation>
+            <enableRulesSummary>false</enableRulesSummary>
           </configuration>
         </plugin>
         <plugin>
@@ -636,6 +637,26 @@
               <sourcePath>${xjcOutputDirectory}</sourcePath>
               <sourcePath>${javaccOutputDirectory}</sourcePath>
             </sourcePaths>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>taglist-maven-plugin</artifactId>
+          <version>2.4</version>
+          <configuration>
+            <tagListOptions>
+              <tagClasses>
+                <tagClass>
+                  <displayName>JDK Tags</displayName>
+                  <tags>
+                    <tag>
+                      <matchString>JDK:</matchString>
+                      <matchType>exact</matchType>
+                    </tag>
+                  </tags>
+                </tagClass>
+              </tagClasses>
+            </tagListOptions>
           </configuration>
         </plugin>
         <plugin>
@@ -1277,6 +1298,34 @@
         </reportSets>
       </plugin>
       <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>taglist-maven-plugin</artifactId>
+        <version>2.4</version>
+        <reportSets>
+          <reportSet>
+            <id>default-taglist</id>
+            <reports>
+              <report>taglist</report>
+            </reports>
+          </reportSet>
+        </reportSets>
+        <configuration>
+          <tagListOptions>
+            <tagClasses>
+              <tagClass>
+                <displayName>JDK Tags</displayName>
+                <tags>
+                  <tag>
+                    <matchString>JDK:</matchString>
+                    <matchType>exact</matchType>
+                  </tag>
+                </tags>
+              </tagClass>
+            </tagClasses>
+          </tagListOptions>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-pmd-plugin</artifactId>
         <version>2.6</version>
@@ -1326,6 +1375,7 @@
         </reportSets>
         <configuration>
           <configLocation>org/jomc/build/resources/checkstyle.xml</configLocation>
+          <enableRulesSummary>false</enableRulesSummary>
         </configuration>
       </plugin>
       <plugin>
@@ -1603,10 +1653,10 @@
                   <requireMavenVersion>
                     <message>
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-!! This project must be released using Apache Maven 3.0.3 (r1075438; 2011-02-28 18:31:09+0100)!!
+!! This project must be released using Apache Maven 3.0.4 (r1232337; 2012-01-17 09:44:56+0100)!!
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
                     </message>
-                    <version>[3.0.3]</version>
+                    <version>[3.0.4]</version>
                   </requireMavenVersion>
                 </rules>
               </configuration>
@@ -1783,6 +1833,7 @@
       <properties>
         <jomc.verbose>true</jomc.verbose>
         <jomc.sourceProcessing>false</jomc.sourceProcessing>
+        <checkstyle.enable.rss>false</checkstyle.enable.rss>
       </properties>
     </profile>
   </profiles>
