o Updated the configuration of the 'maven-jomc-plugin' adding a 'with-project-name' template parameter.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@4224 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/pom.xml
+++ b/pom.xml
@@ -1103,13 +1103,17 @@
           <configuration>
             <templateParameters>
               <templateParameter>
-                <key>with-vendor-copyright</key>
-                <value>false</value>
-                <type>java.lang.Boolean</type>
+                <key>with-project-name</key>
+                <value>Java Object Management and Configuration</value>
               </templateParameter>
               <templateParameter>
                 <key>with-revision-keyword</key>
                 <value>JOMC</value>
+              </templateParameter>
+              <templateParameter>
+                <key>with-vendor-copyright</key>
+                <value>false</value>
+                <type>java.lang.Boolean</type>
               </templateParameter>
             </templateParameters>
           </configuration>
